# mab-optimization-api

mab-api-git/: Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml
mab-api-git/dashboard/: streamlit_dashboard.py
mab-api-git/docs/: API.md  DATA_DICTIONARY.md  ERD.md
mab-api-git/infrastructure/snowflake/: 01_create_database.sql  01_create_schema.sql  02_create_tables.sql  03_add_allocation_history.sql  03_migration.sql
mab-api-git/src/: __init__.py  config.py  logging_config.py  main.py  middleware.py  rate_limit.py
mab-api-git/src/models/: __init__.py  allocation.py  experiment.py  metrics.py
mab-api-git/src/repositories/: __init__.py  allocation_history.py  database.py  experiment.py  metrics.py  repositories__init__.py
mab-api-git/src/routers/: __init__.py  experiments.py  health.py
mab-api-git/src/services/: __init__.py  allocation.py  experiment.py
mab-api-git/src/sql/: __init__.py  sql_init.py
mab-api-git/tests/: __init__.py  conftest.py
mab-api-git/tests/integration/: test_api.py
mab-api-git/tests/unit/: test_allocation.py  test_logging.py  test_middleware.py  test_rate_limit.py
